--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ flutter:
 
   uses-material-design: true
   assets:
-    - assets/logo/logo.svg
-    - assets/icons/google.svg
+    - assets/images/
+    - assets/icons/
 
 
 
